--- a/_data/dashboard/SDG-indicators.yml
+++ b/_data/dashboard/SDG-indicators.yml
@@ -246,7 +246,7 @@
     permalink: 3-3-1
     title: Number of new HIV infections per 1,000 uninfected population, by sex, age and key populations
     new: No
-    notes: "ratio" replaced "rate"
+    notes: "ratio replaced rate"
 -
     goal: 3
     subgoal: 3
@@ -420,7 +420,7 @@
     subgoal: 1
     indicator: 1
     permalink: 4-1-1
-    title: Proportion of children and young people: (a) in grades 2/3; (b) at the end of primary; and (c) at the end of lower secondary achieving at least a minimum proficiency level in (i) reading and (ii) mathematics, by sex
+    title: Proportion of children and young people (a) in grades 2/3; (b) at the end of primary; and (c) at the end of lower secondary achieving at least a minimum proficiency level in (i) reading and (ii) mathematics, by sex
     new: No
     notes:
 -
@@ -476,7 +476,7 @@
     subgoal: 7
     indicator: 1
     permalink: 4-7-1
-    title: Extent to which (i) global citizenship education and (ii) education for sustainable development, including gender equality and human rights, are mainstreamed at all levels in: (a) national education policies, (b) curricula, (c) teacher education and (d) student assessment
+    title: Extent to which (i) global citizenship education and (ii) education for sustainable development, including gender equality and human rights, are mainstreamed at all levels in (a) national education policies, (b) curricula, (c) teacher education and (d) student assessment
     new: No
     notes:
 -
@@ -484,7 +484,7 @@
     subgoal: a
     indicator: 1
     permalink: 4-a-1
-    title: Proportion of schools with access to: (a) electricity; (b) the Internet for pedagogical purposes; (c) computers for pedagogical purposes; (d) adapted infrastructure and materials for students with disabilities; (e) basic drinking water; (f) single- sex basic sanitation facilities; and (g) basic handwashing facilities (as per the WASH indicator definitions)
+    title: Proportion of schools with access to (a) electricity; (b) the Internet for pedagogical purposes; (c) computers for pedagogical purposes; (d) adapted infrastructure and materials for students with disabilities; (e) basic drinking water; (f) single- sex basic sanitation facilities; and (g) basic handwashing facilities (as per the WASH indicator definitions)
     new: No
     notes:
 -
@@ -500,7 +500,7 @@
     subgoal: c
     indicator: 1
     permalink: 4-c-1
-    title: Proportion of teachers in: (a) pre-primary; (b) primary; (c) lower secondary; and (d) upper secondary education who have received at least the minimum organized teacher training (e.g. pedagogical training) pre-service or in-service required for teaching at the relevant level in a given country
+    title: Proportion of teachers in (a) pre-primary; (b) primary; (c) lower secondary; and (d) upper secondary education who have received at least the minimum organized teacher training (e.g. pedagogical training) pre-service or in-service required for teaching at the relevant level in a given country
     new: No
     notes:
 -
@@ -660,7 +660,7 @@
     subgoal: 4
     indicator: 2
     permalink: 6-4-2
-    title: Level of water stress: freshwater withdrawal as a proportion of available freshwater resources
+    title: Level of water stress freshwater withdrawal as a proportion of available freshwater resources
     new: No
     notes:
 -
