--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github_client_id:
 gatekeeper_host:
 
 # Dataset schema
-schema: datajson
+schema: default
 
 # Categories
 category_list:
@@ -42,30 +42,33 @@ navigation:
 
 # Collections
 collections:
-  - datasets:
-      output: true
-      permalink: /datasets/:path/
-      layout: dataset
-  - organizations:
-      output: false
-  - indicators:
-      output: true
-      layout: dashboard
-      permalink: /dashboard/:path/
+  datasets:
+    output: true
+    permalink: /datasets/:path/
+    layout: dataset
+  organizations:
+    output: false
+  indicators:
+    output: true
+    layout: dashboard
+    permalink: /dashboard/:path/
 
 # Collections (cont'd)
 defaults:
-  - scope:
-      path: ""
-      type: datasets
-    values:
-      category: Uncategorized
-      organization: N/A
+  scope:
+    path: ""
+    type: dataset
+  values:
+    category: Uncategorized
+    organization: N/A
 
 # Markdown settings
 markdown: kramdown
 kramdown:
   input: GFM
+
+#Offline mode
+offline: false
 
 # Google Analytics
 google_analytics:
