--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ category_list:
   - Partnerships
 
 # Link for the "fork me on github" banner. Remove this line to suppress banner.
-fork_me_url: https://github.com/jjediny/jkan
+fork_me_url: https://github.com/gsa/jkan
 
 # Nav bar
 navigation:
