--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,9 @@ collections:
     permalink: /datasets/:path/
     layout: dataset
   organizations:
-    permalink: /organizations/:path/
     output: true
+    permalink: /organizations/:path/
+    layout: organization
   indicators:
     output: true
     permalink: /dashboard/:path/
